[package]
name = "reddy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
bb8 = "0.7.1"
bb8-redis = "0.14.0"
redis = "0.24.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env-file-reader = "0.3"
