[package]
name = "reddy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
redis = { version = "0.25.3", features = [ "tokio-comp" ] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env-file-reader = "0.3"
